--- a/DB_ECommerce.MVC/Views/Orders/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Orders/Index.cshtml
@@ -1,5 +1,34 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<DB_ECommerce.MVC.ViewModels.Orders.OrderListViewModel>
+
 @{
+    ViewData["Title"] = "Orders";
 }
+
+<h2>Orders</h2>
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New Order</a>
+</p>
+
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.First().OrderID)</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var order in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => order.OrderID)</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@order.OrderID" class="btn btn-warning">Edit</a>
+                    <a asp-action="Details" asp-route-id="@order.OrderID" class="btn btn-info">Details</a>
+                    <a asp-action="Delete" asp-route-id="@order.OrderID" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
