--- a/DB_ECommerce.MVC/Views/Shared/_Layout.cshtml
+++ b/DB_ECommerce.MVC/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
