--- a/DB_ECommerce.MVC/Views/Home/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Home/Index.cshtml
@@ -1,4 +1,48 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Willkommen!";
 }
-<h1>Willkommen in der E-Commerce-App!</h1>
+
+<div class="container text-center">
+    <h1 class="display-3">Willkommen in der E-Commerce-App!</h1>
+    <p class="lead">Finde deine Lieblingsprodukte und bestelle ganz einfach.</p>
+
+    <a class="btn btn-primary btn-lg" asp-controller="Products" asp-action="Index">Jetzt einkaufen</a>
+    <a class="btn btn-outline-secondary btn-lg" asp-controller="Categories" asp-action="Index">Kategorien ansehen</a>
+</div>
+
+<div class="container mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <div class="card">
+                <img src="~/images/categories.jpg" class="card-img-top" alt="Kategorie 1">
+                <div class="card-body">
+                    <h5 class="card-title">Kategorien</h5>
+                    <p class="card-text">Durchstöbere verschiedene Produktkategorien.</p>
+                    <a asp-controller="Categories" asp-action="Index" class="btn btn-primary">Mehr erfahren</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card">
+                <img src="~/images/Produkt.jpg" class="card-img-top" alt="Produkte">
+                <div class="card-body">
+                    <h5 class="card-title">Beliebte Produkte</h5>
+                    <p class="card-text">Unsere Kunden lieben diese Produkte.</p>
+                    <a asp-controller="Products" asp-action="Index" class="btn btn-primary">Jetzt ansehen</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card">
+                <img src="~/images/sale.jpg" class="card-img-top" alt="Angebote">
+                <div class="card-body">
+                    <h5 class="card-title">Angebote</h5>
+                    <p class="card-text">Hol dir die besten Deals und spare Geld.</p>
+                    <a asp-controller="Products" asp-action="Index" class="btn btn-primary">Angebote entdecken</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
