Home page englsich

--- a/DB_ECommerce.MVC/Views/Customers/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Customers/Index.cshtml
@@ -10,7 +10,7 @@
 	<a asp-action="Create" class="btn btn-primary">Create New Customer</a>
 </p>
 
-<table class="table table-s">
+<table class="table table-striped">
 	<thead>
 		<tr>
 			<th>@Html.DisplayNameFor(Model => Model.First().FirstName)</th>
@@ -33,3 +33,4 @@
 		}
 	</tbody>
 </table>
+
