--- a/DB_ECommerce.MVC/Views/Payments/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Payments/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create" class="btn btn-primary">Create New Payment</a>
 </p>
 
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>@Html.DisplayNameFor(model => model.Currency)</th>
