--- a/DB_ECommerce.MVC/Views/Products_Orders/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Products_Orders/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create" class="btn btn-primary">Create New Order</a>
 </p>
 
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>Product</th>
