Graphic Design is my passion

--- a/DB_ECommerce.MVC/Views/Home/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <div class="row justify-content-center">
         <div class="col-md-4">
             <div class="card">
-                <img src="~/images/categories.jpg" class="card-img-top" alt="Kategorie 1">
+                <img src="~/images/meow.jpg" class="card-img-top" alt="Kategorie 1">
                 <div class="card-body">
                     <h5 class="card-title">Categories</h5>
                     <p class="card-text">Browse different product categories.</p>
