--- a/DB_ECommerce.MVC/Views/Home/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Home/Index.cshtml
@@ -3,10 +3,11 @@
 }
 
 <div class="container text-center mb-3 mt-5">
-    <h1 class="display-3">Welcome to the E-Commerce-App!</h1>
-    <p class="lead">Find and order your favourite products easily.</p>
+    <h1 class="display-3"><strong>Welcome to Globalia!</strong></h1>
+    <p class="lead">From Anywhere to Everywhere – Globalia Has It All!</p>
+    <p class="lead">Find and order your favourite products now.</p>
 
-    <a class="btn btn-primary btn-lg" asp-controller="Products" asp-action="Index">Buy now</a>
+    <a class="btn btn-primary btn-lg" asp-controller="Products" asp-action="Index">See all our products</a>
     <a class="btn btn-outline-secondary btn-lg" asp-controller="Categories" asp-action="Index">View Categories</a>
 </div>
 
