--- a/DB_ECommerce.MVC/Views/Payments/Details.cshtml
+++ b/DB_ECommerce.MVC/Views/Payments/Details.cshtml
@@ -10,20 +10,20 @@
     <h4>Payment</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Currency)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Currency)</dd>
+        <dt class="col-sm-2">Currency</dt>
+        <dd class="col-sm-10">@Model.Currency</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.PaymentMethod)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.PaymentMethod)</dd>
+        <dt class="col-sm-2">Payment Method</dt>
+        <dd class="col-sm-10">@Model.PaymentMethod</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.PaymentStatus)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.PaymentStatus)</dd>
+        <dt class="col-sm-2">Payment Status</dt>
+        <dd class="col-sm-10">@Model.PaymentStatus</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.PaymentAmount)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.PaymentAmount)</dd>
+        <dt class="col-sm-2">Payment Amount</dt>
+        <dd class="col-sm-10">@Model.PaymentAmount</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.OpenPayment)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.OpenPayment)</dd>
+        <dt class="col-sm-2">Open Payment</dt>
+        <dd class="col-sm-10">@Model.OpenPayment</dd>
     </dl>
 </div>
 
