--- a/DB_ECommerce.MVC/Views/Categories/Details.cshtml
+++ b/DB_ECommerce.MVC/Views/Categories/Details.cshtml
@@ -7,8 +7,15 @@
 <h2>Category Details</h2>
 
 <div>
-    <h4>Category Name:</h4>
-    <p>@Model.CategoryName</p>
+    <h4>Category</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">Category Name</dt>
+        <dd class="col-sm-10">@Model.CategoryName</dd>
+
+        <dt class="col-sm-2">Category ID</dt>
+        <dd class="col-sm-10">@Model.Id</dd>
+    </dl>
 </div>
 
 <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
