--- a/DB_ECommerce.MVC/Views/Customers/Details.cshtml
+++ b/DB_ECommerce.MVC/Views/Customers/Details.cshtml
@@ -7,18 +7,27 @@
 <h2>Customer Details</h2>
 
 <div>
-    <h4>First Name:</h4>
-    <p>@Model.FirstName</p>
-    <h4>Last Name:</h4>
-    <p>@Model.LastName</p>
-    <h4>Address:</h4>
-    <p>@Model.Address</p>
-    <h4>Birthday:</h4>
-    <p>@Model.Birthday</p>
-    <h4>Account Created:</h4>
-    <p>@Model.AccountCreated</p>
-    <h4>Email:</h4>
-    <p>@Model.Email</p>
+    <h4>Customer</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">First Name</dt>
+        <dd class="col-sm-10">@Model.FirstName</dd>
+
+        <dt class="col-sm-2">Last Name</dt>
+        <dd class="col-sm-10">@Model.LastName</dd>
+
+        <dt class="col-sm-2">Address</dt>
+        <dd class="col-sm-10">@Model.Address</dd>
+
+        <dt class="col-sm-2">Birthday</dt>
+        <dd class="col-sm-10">@Model.Birthday</dd>
+
+        <dt class="col-sm-2">Account Created</dt>
+        <dd class="col-sm-10">@Model.AccountCreated</dd>
+
+        <dt class="col-sm-2">Email</dt>
+        <dd class="col-sm-10">@Model.Email</dd>
+    </dl>
 </div>
 
 <a asp-action="Edit" asp-route-id="@Model.CustomerID" class="btn btn-warning">Edit</a>
