--- a/DB_ECommerce.MVC/Views/Shared/_Layout.cshtml
+++ b/DB_ECommerce.MVC/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - DB_ECommerce.MVC</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DB_ECommerce.MVC.styles.css" asp-append-version="true" />
 </head>
@@ -32,17 +32,24 @@
                 </div>
             </nav>
         </header>
-
         <!-- Hauptinhalt, der sich flexibel ausdehnt -->
         <main class="container flex-grow-1">
             @RenderBody()
         </main>
     </div>
 
-   
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <footer class="text-dark text-center py-3">
+        <div class="container">
+            <p>&copy; 2025 Globalia. Database-Project. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+
 </body>
+
 </html>
