--- a/DB_ECommerce.MVC/Views/Categories/Delete.cshtml
+++ b/DB_ECommerce.MVC/Views/Categories/Delete.cshtml
@@ -3,17 +3,21 @@
 @{
     ViewData["Title"] = "Delete Category";
 }
+<h2>Delete Category</h2>
 
-<h2>Are you sure you want to delete this category?</h2>
+<h3>Are you sure you want to delete this category?</h3>
 
 <div>
-    <h4>Category Name:</h4>
-    <p>@Model.CategoryName</p>
+    <h4>Category</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">Category Name</dt>
+        <dd class="col-sm-10">@Model.CategoryName</dd>
+    </dl>
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="Id" />
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
 </div>
-
-<form asp-action="DeleteConfirmed">
-    <input type="hidden" asp-for="Id" />
-    <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-</form>
 
