--- a/DB_ECommerce.MVC/Views/Customers/Delete.cshtml
+++ b/DB_ECommerce.MVC/Views/Customers/Delete.cshtml
@@ -4,18 +4,37 @@
     ViewData["Title"] = "Delete Customer";
 }
 
-<h2>Are you sure you want to delete this customer?</h2>
+<h2>Delete Customer</h2>
+
+<h3>Are you sure you want to delete this customer?</h3>
 
 <div>
-    <h4>Customer Name:</h4>
-    <p>@Model.FirstName</p>
-    <p>@Model.LastName</p>
+    <h4>Customer</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">First Name</dt>
+        <dd class="col-sm-10">@Model.FirstName</dd>
 
+        <dt class="col-sm-2">Last Name</dt>
+        <dd class="col-sm-10">@Model.LastName</dd>
+
+        <dt class="col-sm-2">Address</dt>
+        <dd class="col-sm-10">@Model.Address</dd>
+
+        <dt class="col-sm-2">Birthday</dt>
+        <dd class="col-sm-10">@Model.Birthday</dd>
+
+        <dt class="col-sm-2">Account Created</dt>
+        <dd class="col-sm-10">@Model.AccountCreated</dd>
+
+        <dt class="col-sm-2">Email</dt>
+        <dd class="col-sm-10">@Model.Email</dd>
+    </dl>
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="CustomerID" />
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
 </div>
 
-<form asp-action="DeleteConfirmed">
-    <input type="hidden" asp-for="CustomerID" />
-    <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-</form>
 
