--- a/DB_ECommerce.MVC/Views/Orders/Delete.cshtml
+++ b/DB_ECommerce.MVC/Views/Orders/Delete.cshtml
@@ -4,16 +4,30 @@
     ViewData["Title"] = "Delete Order";
 }
 
-<h2>Are you sure you want to delete this order?</h2>
+<h2>Delete Order</h2>
+
+<h3>Are you sure you want to delete this order?</h3>
 
 <div>
-    <h4>Order IDe:</h4>
-    <p>@Model.OrderID</p>
-</div>
+    <h4>Order</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">Order Dater</dt>
+        <dd class="col-sm-10">@Model.OrderDate</dd>
 
-<form asp-action="DeleteConfirmed">
-    <input type="hidden" asp-for="OrderID" />
-    <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-</form>
+        <dt class="col-sm-2">Total Price</dt>
+        <dd class="col-sm-10">@Model.TotalPrice</dd>
+
+        <dt class="col-sm-2">Customer</dt>
+        <dd class="col-sm-10">@Model.Customer</dd>
+
+        <dt class="col-sm-2">Payment</dt>
+        <dd class="col-sm-10">@Model.Payment</dd>
+    </dl>
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="OrderID" />
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
+</div>
 
