--- a/DB_ECommerce.MVC/Views/Products/Delete.cshtml
+++ b/DB_ECommerce.MVC/Views/Products/Delete.cshtml
@@ -4,20 +4,25 @@
     ViewData["Title"] = "Delete Product";
 }
 
-<h2>Are you sure you want to delete this?</h2>
+<h2>Delete Product</h2>
+
+<h3>Are you sure you want to delete this?</h3>
 
 <div>
-    <h4>@Model.ProductName</h4>
+    <h4>Product</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">Product Name</dt>
+        <dd class="col-sm-10">@Model.ProductName</dd>
+        
         <dt class="col-sm-2">Price</dt>
-        <dd class="col-sm-10">@Model.Price.ToString("C")</dd>
+        <dd class="col-sm-10">@Model.Price</dd>
     </dl>
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="ProductID" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
 </div>
 
-<form asp-action="DeleteConfirmed" method="post">
-    <input type="hidden" asp-for="ProductID" />
-    <input type="submit" value="Delete" class="btn btn-danger" />
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-</form>
 
