--- a/DB_ECommerce.MVC/Views/Customers/Create.cshtml
+++ b/DB_ECommerce.MVC/Views/Customers/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Create Customer</h2>
 
-<form asp-action="Create">
+<form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="FirstName" class="control-label"></label>
         <input asp-for="FirstName" class="form-control" />
@@ -32,8 +32,3 @@
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </form>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
