--- a/DB_ECommerce.MVC/Views/Customers/Edit.cshtml
+++ b/DB_ECommerce.MVC/Views/Customers/Edit.cshtml
@@ -6,32 +6,35 @@
 
 <h2>Edit Customer</h2>
 
-<form asp-action="Edit">
+<form asp-action="Edit" method="post">
     <input type="hidden" asp-for="CustomerID" />
     <div class="form-group">
-        <label asp-for="FirstName" class="control-label"></label>
+        <label asp-for="FirstName"></label>
         <input asp-for="FirstName" class="form-control" />
         <span asp-validation-for="FirstName" class="text-danger"></span>
-        <label asp-for="LastName" class="control-label"></label>
+    </div>
+    <div class="form-group">
+        <label asp-for="LastName"></label>
         <input asp-for="LastName" class="form-control" />
         <span asp-validation-for="LastName" class="text-danger"></span>
-        <label asp-for="Address" class="control-label"></label>
+    </div>
+    <div>
+        <label asp-for="Address"></label>
         <input asp-for="Address" class="form-control" />
         <span asp-validation-for="Address" class="text-danger"></span>
-        <label asp-for="Birthday" class="control-label"></label>
+    </div>
+    <div>
+        <label asp-for="Birthday"></label>
         <input type="date" asp-for="Birthday" class="form-control" />
         <span asp-validation-for="Birthday" class="text-danger"></span>
-        <label asp-for="Email" class="control-label"></label>
+    </div>
+    <div>
+        <label asp-for="Email"></label>
         <input type="email" asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-success">Save Changes</button>
+    <button type="submit" class="btn btn-primary">Save Changes</button>
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </form>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
 
