--- a/DB_ECommerce.MVC/Views/Orders/Edit.cshtml
+++ b/DB_ECommerce.MVC/Views/Orders/Edit.cshtml
@@ -23,12 +23,7 @@
         <input asp-for="Customer" class="form-control" />
         <span asp-validation-for="Customer" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-success">Save Changes</button>
+    <button type="submit" class="btn btn-primary">Save Changes</button>
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </form>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
