--- a/DB_ECommerce.MVC/Views/Products/Delete.cshtml
+++ b/DB_ECommerce.MVC/Views/Products/Delete.cshtml
@@ -20,7 +20,7 @@
     </dl>
     <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="ProductID" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <button type="submit" class="btn btn-danger"></button>
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
