Customer Edit bug fix

--- a/DB_ECommerce.MVC/Views/Shipments/Edit.cshtml
+++ b/DB_ECommerce.MVC/Views/Shipments/Edit.cshtml
@@ -26,7 +26,7 @@
     <div class="form-group">
         <label asp-for="ShipmentStatus"></label>
         <input asp-for="ShipmentStatus" class="form-control" />
-        <span asp-validation-for="ShipmentStatus" class="text-danger"></span>
+        <span asp-validasion-for="ShipmentStatus" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="OrderId"></label>
