--- a/DB_ECommerce.MVC/Views/Payments/Delete.cshtml
+++ b/DB_ECommerce.MVC/Views/Payments/Delete.cshtml
@@ -25,6 +25,9 @@
 
         <dt class="col-sm-2">OpenPayment</dt>
         <dd class="col-sm-10">@Model.OpenPayment</dd>
+
+        <dt class="col-sm-2">Order ID</dt>
+        <dd class="col-sm-10">@Model.OrderID</dd>
     </dl>
 
     <form asp-action="Delete" method="post">
