--- a/DB_ECommerce.MVC/Views/Payments/Create.cshtml
+++ b/DB_ECommerce.MVC/Views/Payments/Create.cshtml
@@ -27,6 +27,10 @@
         <label asp-for="OpenPayment" class="control-label"></label>
         <input asp-for="OpenPayment" class="form-control" />
     </div>
+    <div class="form-group">
+        <label asp-for="OrderID" class="control-label"></label>
+        <input type="number" asp-for="OrderID" class="form-control" />
+    </div>
     <button type="submit" class="btn btn-primary">Create</button>
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </form>
