--- a/DB_ECommerce.MVC/Views/Payments/Details.cshtml
+++ b/DB_ECommerce.MVC/Views/Payments/Details.cshtml
@@ -24,6 +24,9 @@
 
         <dt class="col-sm-2">Open Payment</dt>
         <dd class="col-sm-10">@Model.OpenPayment</dd>
+
+        <dt class="col-sm-2">Order ID</dt>
+        <dd class="col-sm-10">@Model.OrderID</dd>
     </dl>
 </div>
 
