--- a/DB_ECommerce.MVC/Views/Products_Orders/Create.cshtml
+++ b/DB_ECommerce.MVC/Views/Products_Orders/Create.cshtml
@@ -10,18 +10,20 @@
     <div class="form-group">
         <label asp-for="ProductId" class="control-label"></label>
         <input asp-for="ProductId" class="form-control" />
+        <span asp-validation-for="ProductId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="OrderId" class="control-label"></label>
         <input asp-for="OrderId" class="form-control" />
+        <span asp-validation-for="OrderId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Quantity" class="control-label"></label>
         <input asp-for="Quantity" class="form-control" />
+        <span asp-validation-for="Quantity" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
+    <a asp-action="Index" class="btn-danger btn-secondary">Back to List</a>
 </form>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    
