--- a/DB_ECommerce.MVC/Views/Products_Orders/Delete.cshtml
+++ b/DB_ECommerce.MVC/Views/Products_Orders/Delete.cshtml
@@ -7,14 +7,27 @@
 <h2>Delete Product Order</h2>
 
 <h3>Are you sure you want to delete this order?</h3>
-<div>
-    <h4>Product: @Model.ProductName</h4>
-    <p>Quantity: @Model.Quantity</p>
-    <p>Total Price: @Model.TotalPrice.ToString("C")</p>
-</div>
 
-<form asp-action="DeleteConfirmed" method="post">
-    <input type="hidden" asp-for="ProductOrderID" />
-    <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-</form>
+<div>
+    <h4>Product</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">Product Name</dt>
+        <dd class="col-sm-10">@Model.ProductName</dd>
+
+        <dt class="col-sm-2">Quantity</dt>
+        <dd class="col-sm-10">@Model.Quantity</dd>
+
+        <dt class="col-sm-2">Total Price</dt>
+        <dd class="col-sm-10">@Model.TotalPrice</dd>
+
+        <dt class="col-sm-2">Order Number</dt>
+        <dd class="col-sm-10">@Model.OrderNumber</dd>
+    </dl>
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="ProductOrderID" />
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
+    
+</div>
