--- a/DB_ECommerce.MVC/Views/Products_Orders/Edit.cshtml
+++ b/DB_ECommerce.MVC/Views/Products_Orders/Edit.cshtml
@@ -13,8 +13,8 @@
         <input asp-for="Quantity" class="form-control" />
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </form>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
