--- a/DB_ECommerce.MVC/Views/Home/Index.cshtml
+++ b/DB_ECommerce.MVC/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
             <div class="card">
                 <img src="~/images/Produkt.jpg" class="card-img-top" alt="Products">
                 <div class="card-body">
-                    <h5 class="card-title">Poupular Products</h5>
+                    <h5 class="card-title">Popular Products</h5>
                     <p class="card-text">Our customers love these products.</p>
                     <a asp-controller="Products" asp-action="Index" class="btn btn-primary">Browse now</a>
                 </div>
